# rhttp

./: Cargo.toml  README.md
page/: hello.html  index.html  readme.txt  test2020.com_chain.crt  test2020.com_key.key  updown.html
page/error/: 404.html
src/: lib.rs  main.rs  tpool.rs
src/parser/: http.rs  mod.rs
src/parser/http/method/: get.rs  head.rs  method_template.rs  mod.rs  options.rs  post.rs  put.rs
src/parser/http/method/utils/: chunk.rs  mod.rs
