[package]
name = "rhttp"
version = "0.1.0"
authors = ["William Wang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde = "1.0.117"
serde_derive = "1.0.117"
confy = "0.4"
openssl = { version="0.10" }
# libssl-dev, pkg-config is needed to use openssl